# openrelik-cloud-resource-manager

./: .gitignore  README.md  pyproject.toml
src/: crud.py  database.py  main.py  models.py  schemas.py
